Fix some spacing on the header.

--- a/wp-content/themes/levels-wp-1-child/style.css
+++ b/wp-content/themes/levels-wp-1-child/style.css
@@ -82,7 +82,7 @@
 
 .header--dark {
   background-color: #97E45D;
-  padding: 2em 0 .5em 0 !important;
+  padding: 2em 0 1.25em 0 !important;
 }
 
 .header--bright {
